Answering More Questions Editing Code
Edited a lot of code to make them more concise.

--- a/Applied Data Homework 3.ipynb
+++ b/Applied Data Homework 3.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import col, trim, round, avg, concat_ws, rank, row_number, round, col, when, udf, year, datediff, count, lit, when\n",
+    "from pyspark.sql.functions import col, trim, round, avg, concat_ws, rank, row_number, round, when, udf, year, datediff, count, lit, when, to_date, month, dayofmonth\n",
     "from pyspark.sql.window import Window\n",
     "import pyspark.sql.functions as F\n",
     "from pyspark.sql.types import StringType\n",
@@ -72,6 +72,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "14adfa12-f9d9-497d-865f-12ce90b92e30",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "###Q1:[10 pts] What was the average time each driver spent at the pit stop for each race?\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -89,8 +105,6 @@
    },
    "outputs": [],
    "source": [
-    "# The first question asks \"What was the average time each driver spent at the pit stop for each race?\"\n",
-    "\n",
     "#Joining pit stops and drivers data (specfically selecting columns that are needed)\n",
     "\n",
     "drivers_df = drivers_df.select(\"driverId\", \"forename\", \"surname\")\n",
@@ -114,6 +128,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ce121b1b-5bda-489b-a75e-42d61bbe5d39",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "###Q2:[20 pts] Rank the average time spent at the pit stop in order of who won each race"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -123,7 +153,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "ae793042-d846-4c15-83d1-8ea34b879fdc",
+     "nuid": "b1840b0d-7840-4173-b8a2-95fa731988dc",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -131,25 +161,59 @@
    },
    "outputs": [],
    "source": [
-    "# The second question asks us to \"rank the average time spent at the pit stop in order of who won each race\"\n",
+    "# Calculate the average pit stop time per driver and race (rounded to 2 decimal places) with average pit time calcualted in milliseconds\n",
+    "avg_pit_stop_time_df = pit_stops_df.groupBy(\"raceId\", \"driverId\") \\\n",
+    "    .agg(round(avg(\"milliseconds\"), 2).alias(\"avg_pit_stop_time\"))\n",
     "\n",
-    "# Join results with pit stops\n",
-    "joined_df = results_df.join(pit_stops_df, on=[\"raceId\", \"driverId\"], how=\"inner\")\n",
-    "\n",
-    "# Compute average pit stop time per driver per race and position\n",
-    "avg_pit_df = joined_df.groupBy(\"raceId\", \"driverId\", \"positionOrder\").agg(\n",
-    "    avg(pit_stops_df.milliseconds).alias(\"avg_pit_stop_time\")\n",
+    "# Join with the results dataset to bring in the finishing order (using 'positionOrder')\n",
+    "# We use 'positionOrder' instead of 'position' because 'positionOrder' actually shows the finishing position instead of a null value. It looks like 'positionOrder' actually puts a position in the race, even if they did not finish the race\n",
+    "avg_pit_stop_with_results = avg_pit_stop_time_df.join(\n",
+    "    results_df.select(\"raceId\", \"driverId\", \"positionOrder\"),\n",
+    "    on=[\"raceId\", \"driverId\"],\n",
+    "    how=\"left\"\n",
     ")\n",
     "\n",
-    "# Define window by raceId, ordered by finishing position\n",
-    "window_spec = Window.partitionBy(\"raceId\").orderBy(\"positionOrder\")\n",
+    "# Adding some driver names\n",
+    "avg_pit_stop_with_results = avg_pit_stop_with_results.join(\n",
+    "    drivers_df, on=\"driverId\", how=\"left\"\n",
+    ").withColumn(\"driver_name\", concat_ws(\" \", \"forename\", \"surname\"))\n",
     "\n",
-    "# Rank drivers by their finish within each race\n",
-    "ranked_df = avg_pit_df.withColumn(\"avg_pit_stop_time\", round(avg_pit_df[\"avg_pit_stop_time\"], 2)) \\\n",
-    "                      .withColumn(\"finishing_rank\", row_number().over(window_spec))\n",
-    "# Sort and display the final result\n",
-    "final_df = ranked_df.orderBy(\"raceId\", \"finishing_rank\")\n",
-    "final_df.show(40)\n"
+    "# Adding the race names\n",
+    "avg_pit_stop_with_results = avg_pit_stop_with_results.join(\n",
+    "    races_df.select(\"raceId\", \"name\"),\n",
+    "    on=\"raceId\",\n",
+    "    how=\"left\"\n",
+    ").withColumnRenamed(\"name\", \"race_name\")\n",
+    "\n",
+    "# Define a window partitioned by raceId, ordering by positionOrder.\n",
+    "# Using asc_nulls_last() ensures that if any non-finishers (with null in positionOrder) exist, they are placed at the end. Putting this in just in case there are null values in thedata\n",
+    "window_spec = Window.partitionBy(\"raceId\").orderBy(col(\"positionOrder\").asc_nulls_last())\n",
+    "\n",
+    "# Create a new column with the finishing rank based on the race results\n",
+    "ranked_result = avg_pit_stop_with_results.withColumn(\"finishing_rank\", rank().over(window_spec))\n",
+    "\n",
+    "# Order the final DataFrame by raceId, finishing_rank, and driverId for consistency\n",
+    "final_df = ranked_result.orderBy(\"raceId\", \"finishing_rank\", \"driverId\")\n",
+    "\n",
+    "# Displaying the results\n",
+    "final_df.select(\"raceId\", \"race_name\", \"driverId\", \"driver_name\", \n",
+    "                \"avg_pit_stop_time\", \"positionOrder\", \"finishing_rank\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9b2e671d-3fe8-44c4-b8e7-5d7818522e6f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "###3.[20 pts] Insert the missing code (e.g: ALO for Alonso) for drivers based on the 'drivers' dataset"
    ]
   },
   {
@@ -170,7 +234,7 @@
    },
    "outputs": [],
    "source": [
-    "# The third question asks insert the missing code (e.g: ALO for Alonso) for drivers based on the 'drivers' dataset\n",
+    "#  To fill in the rest of the missing code, I coded for the first three letters of their surname and capitalized it. This was the pattern I was seeing with the non-null values.\n",
     "\n",
     "# Define a user defined function (UDF) to generate the missing codes\n",
     "def generate_code(surname):\n",
@@ -186,6 +250,22 @@
     "\n",
     "# Show the results\n",
     "drivers_df_filled.select(\"driverId\", \"forename\", \"surname\", \"code\").show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "abe3362f-7aab-4b10-a638-e114ea49d770",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "###4.[20 pts] Who is the youngest and oldest driver for each race? Create a new column called “Age”\n"
    ]
   },
   {
@@ -206,35 +286,68 @@
    },
    "outputs": [],
    "source": [
-    "#The fourth question \"Who is the youngest and oldest driver for each race? Create a new column called “Age”\n",
+    "#To find the age of each driver, I joined the 'pit_stops' dataset with the 'drivers' dataset and the 'races' dataset. I then calculated the age of each driver by subtracting the date of birth from the race date.\n",
     "\n",
-    "# The fourth question \"Who is the youngest and oldest driver for each race? Create a new column called “Age”\"\n",
+    "# Convert date columns to date type if needed\n",
+    "drivers_df = drivers_df.withColumn(\"dob\", F.to_date(\"dob\"))\n",
+    "races_df = races_df.withColumn(\"date\", F.to_date(\"date\"))\n",
     "\n",
-    "# Join drivers and results dataframes\n",
-    "joined_df = drivers_df.join(results_df, \"driverId\").join(races_df, \"raceId\")\n",
+    "# Join the dataframes\n",
+    "joined_df = results_df.join(drivers_df, \"driverId\").join(races_df, \"raceId\")\n",
     "\n",
-    "# Calculate age at the time of the race\n",
-    "age_df = joined_df.withColumn(\n",
+    "# Calculate age: difference in years between race date and date of birth\n",
+    "# This subtracts birth year from race year, then adjusts if birthday hasn't occurred yet that year\n",
+    "joined_df = joined_df.withColumn(\n",
     "    \"Age\",\n",
-    "    round(\n",
-    "        when(\n",
-    "            (year(col(\"date\")) > year(col(\"dob\"))) |\n",
-    "            ((year(col(\"date\")) == year(col(\"dob\"))) & (col(\"date\") >= col(\"dob\"))),\n",
-    "            datediff(col(\"date\"), col(\"dob\")) / 365\n",
-    "        ).otherwise(datediff(col(\"date\"), col(\"dob\")) / 365 - 1)\n",
+    "    F.when(\n",
+    "        (F.month(joined_df.date) > F.month(joined_df.dob)) | \n",
+    "        ((F.month(joined_df.date) == F.month(joined_df.dob)) & \n",
+    "         (F.dayofmonth(joined_df.date) >= F.dayofmonth(joined_df.dob))),\n",
+    "        F.year(joined_df.date) - F.year(joined_df.dob)\n",
+    "    ).otherwise(\n",
+    "        F.year(joined_df.date) - F.year(joined_df.dob) - 1\n",
     "    )\n",
     ")\n",
     "\n",
-    "# Find youngest and oldest drivers for each race\n",
+    "# Find youngest and oldest driver for each race\n",
     "window_spec = Window.partitionBy(\"raceId\")\n",
-    "result_df = age_df.withColumn(\"Youngest_Driver\", F.min(\"Age\").over(window_spec)) \\\n",
-    "                  .withColumn(\"Oldest_Driver\", F.max(\"Age\").over(window_spec)) \\\n",
-    "                  .select(\"raceId\", \"date\", \"Youngest_Driver\", \"Oldest_Driver\") \\\n",
-    "                  .distinct() \\\n",
-    "                  .orderBy(\"raceId\")\n",
     "\n",
-    "# Show the results\n",
-    "display(result_df)"
+    "result_df = joined_df.withColumn(\n",
+    "    \"min_age\", F.min(\"Age\").over(window_spec)\n",
+    ").withColumn(\n",
+    "    \"max_age\", F.max(\"Age\").over(window_spec)\n",
+    ").filter(\n",
+    "    (F.col(\"Age\") == F.col(\"min_age\")) | (F.col(\"Age\") == F.col(\"max_age\"))\n",
+    ").select(\n",
+    "    \"raceId\", \n",
+    "    \"name\", \n",
+    "    \"date\", \n",
+    "    \"driverId\", \n",
+    "    \"forename\", \n",
+    "    \"surname\", \n",
+    "    \"Age\",\n",
+    "    F.when(F.col(\"Age\") == F.col(\"min_age\"), \"Youngest\")\n",
+    "     .otherwise(\"Oldest\").alias(\"Age_Category\")\n",
+    ").orderBy(\"raceId\", \"Age_Category\")\n",
+    "\n",
+    "# Show results\n",
+    "result_df.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9cafcde8-0fe4-48b4-8497-1799df7555c0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "###5.[20 pts] For a given race, which driver has the most wins and losses?"
    ]
   },
   {
@@ -255,14 +368,12 @@
    },
    "outputs": [],
    "source": [
-    "# Queston 5 asks \"For a given race, which driver has the most wins and losses?\"\n",
-    "\n",
     "# Identify all statusIds that represent a \"Did Not Finish\" (DNF)\n",
     "# Usually any description that is NOT \"Finished\" is a DNF\n",
     "dnf_status_ids = status_df.filter(col(\"status\") != \"Finished\").select(\"statusId\").rdd.flatMap(lambda x: x).collect()\n",
     "\n",
     "# Filter to races before the given race\n",
-    "target_race_id = 843\n",
+    "target_race_id = 922\n",
     "previous_races_df = results_df.filter(col(\"raceId\") < target_race_id)\n",
     "\n",
     "# Create labeled columns\n",
@@ -292,6 +403,22 @@
     "# Display results\n",
     "final_df.select(\"surname\", \"wins\", \"completed_not_won\", \"not_completed\", \"total_races\") \\\n",
     "    .orderBy(\"wins\", ascending=False).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ecfa3384-1a10-4166-959f-8a6dc4d46290",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "###6.[10 pts] Continue exploring the data by answering your own question.\n"
    ]
   },
   {
@@ -343,6 +470,55 @@
     "    final_gain_df.select(\"surname\", \"avg_position_gain\")\n",
     "    .orderBy(\"avg_position_gain\", ascending=False)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "35867694-8fc0-40e4-862b-c8efb3e37cb2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Here, any status not equal to \"Finished\" is considered a DNF.\n",
+    "dnf_status_ids = status_df.filter(col(\"status\") != \"Finished\") \\\n",
+    "    .select(\"statusId\").rdd.flatMap(lambda x: x).collect()\n",
+    "\n",
+    "# Set the target race (for example, race 922) and filter previous races.\n",
+    "target_race_id = 922  # Update this value if needed\n",
+    "previous_races_df = results_df.filter(col(\"raceId\") < target_race_id)\n",
+    "\n",
+    "# Create labeled columns:\n",
+    "# - 'win': 1 if driver finished first (positionOrder == 1), else 0.\n",
+    "# - 'completed_not_won': 1 if driver did not win (positionOrder > 1)\n",
+    "#   and completed the race (statusId not in DNF list), else 0.\n",
+    "labeled_df = previous_races_df.withColumn(\n",
+    "    \"win\", when(col(\"positionOrder\") == 1, 1).otherwise(0)\n",
+    ").withColumn(\n",
+    "    \"completed_not_won\", when((col(\"positionOrder\") > 1) & (~col(\"statusId\").isin(dnf_status_ids)), 1).otherwise(0)\n",
+    ")\n",
+    "\n",
+    "# Aggregate counts per driver:\n",
+    "agg_df = labeled_df.groupBy(\"driverId\").agg(\n",
+    "    F.sum(\"win\").alias(\"win_count\"),\n",
+    "    F.sum(\"completed_not_won\").alias(\"non_win_completed_count\")\n",
+    ")\n",
+    "\n",
+    "# Join with the drivers DataFrame to get the driver surnames.\n",
+    "final_df = agg_df.join(drivers_df.select(\"driverId\", \"surname\"), on=\"driverId\", how=\"left\")\n",
+    "\n",
+    "# Order the results by win_count descending.\n",
+    "final_df = final_df.orderBy(\"win_count\", ascending=False).show()"
    ]
   }
  ],
