Minor Edits, Connecting to AWS
Change some of my code with some minor tweaks also added results to my bucks and saved in AWS buckets. Also created a new folder in AWS through here.

--- a/Applied Data Homework 2.ipynb
+++ b/Applied Data Homework 2.ipynb
@@ -20,8 +20,32 @@
    "source": [
     "# Author: Jay Jun\n",
     "# Date: March 22, 2025\n",
-    "# Project: Applied Data Homework #3\n",
-    "# Purpose: Answer question using F1 data on the AWS S3 utilizing Databricks using either Pandas, R , or PySpark "
+    "# Project: Applied Data Homework #2\n",
+    "# Purpose: Answer question using F1 data on the AWS S3 utilizing Databricks using either Pandas, R , or PySpark \n",
+    "# Inputs: raw/pit_stops.csv, raw/drivers.csv, raw/results.csv, raw/races.csv, raw/status.csv, raw/qualifying.csv\n",
+    "# Outputs: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "506d2d91-d5bc-42b6-b067-69448e4f85aa",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Creating a new folder in my AWS bucket to put all my results in \n",
+    "dbutils.fs.mkdirs(\"s3://jwj2123-gr5069/processed/Assignment #2/\")\n"
    ]
   },
   {
@@ -75,7 +99,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "14adfa12-f9d9-497d-865f-12ce90b92e30",
      "showTitle": false,
@@ -124,14 +151,21 @@
     "    .orderBy(\"raceId\", \"avg_duration\")\n",
     "\n",
     "# Show the results\n",
-    "result.show(100, False)\n"
+    "result.show(100, False)\n",
+    "\n",
+    "# Outputting to AWS\n",
+    "result.coalesce(1).write.mode('overwrite').option(\"header\", True)\\\n",
+    "    .csv(\"s3://jwj2123-gr5069/processed/Assignment #2/average_time/\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ce121b1b-5bda-489b-a75e-42d61bbe5d39",
      "showTitle": false,
@@ -166,7 +200,8 @@
     "    .agg(round(avg(\"milliseconds\"), 2).alias(\"avg_pit_stop_time\"))\n",
     "\n",
     "# Join with the results dataset to bring in the finishing order (using 'positionOrder')\n",
-    "# We use 'positionOrder' instead of 'position' because 'positionOrder' actually shows the finishing position instead of a null value. It looks like 'positionOrder' actually puts a position in the race, even if they did not finish the race\n",
+    "# We use 'positionOrder' instead of 'position' because 'positionOrder' actually shows the finishing position instead of a null value. \n",
+    "# It looks like 'positionOrder' actually puts a position in the race, even if they did not finish the race\n",
     "avg_pit_stop_with_results = avg_pit_stop_time_df.join(\n",
     "    results_df.select(\"raceId\", \"driverId\", \"positionOrder\"),\n",
     "    on=[\"raceId\", \"driverId\"],\n",
@@ -197,14 +232,21 @@
     "\n",
     "# Displaying the results\n",
     "final_df.select(\"raceId\", \"race_name\", \"driverId\", \"driver_name\", \n",
-    "                \"avg_pit_stop_time\", \"positionOrder\", \"finishing_rank\").show()"
+    "                \"avg_pit_stop_time\", \"positionOrder\", \"finishing_rank\").show(20)\n",
+    "\n",
+    "# Outputting final ranked results to AWS as CSV\n",
+    "final_df.coalesce(1).write.mode('overwrite').option(\"header\", True)\\\n",
+    "    .csv(\"s3://jwj2123-gr5069/processed/Assignment #2/rank_average_time/\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9b2e671d-3fe8-44c4-b8e7-5d7818522e6f",
      "showTitle": false,
@@ -249,14 +291,21 @@
     ")\n",
     "\n",
     "# Show the results\n",
-    "drivers_df_filled.select(\"driverId\", \"forename\", \"surname\", \"code\").show(10)"
+    "drivers_df_filled.select(\"driverId\", \"forename\", \"surname\", \"code\").show(10)\n",
+    "\n",
+    "# Outputting filled-in driver codes to AWS\n",
+    "drivers_df_filled.coalesce(1).write.mode('overwrite').option(\"header\", True)\\\n",
+    "    .csv(\"s3://jwj2123-gr5069/processed/Assignment #2/missing_code/\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "abe3362f-7aab-4b10-a638-e114ea49d770",
      "showTitle": false,
@@ -331,14 +380,21 @@
     ").orderBy(\"raceId\", \"Age_Category\")\n",
     "\n",
     "# Show results\n",
-    "result_df.show()"
+    "result_df.show()\n",
+    "\n",
+    "# Outputting youngest and oldest drivers per race to AWS as CSV\n",
+    "result_df.coalesce(1).write.mode('overwrite').option(\"header\", True)\\\n",
+    "    .csv(\"s3://jwj2123-gr5069/processed/Assignment #2/age/\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9cafcde8-0fe4-48b4-8497-1799df7555c0",
      "showTitle": false,
@@ -372,8 +428,8 @@
     "# Usually any description that is NOT \"Finished\" is a DNF\n",
     "dnf_status_ids = status_df.filter(col(\"status\") != \"Finished\").select(\"statusId\").rdd.flatMap(lambda x: x).collect()\n",
     "\n",
-    "# Filter to races before the given race\n",
-    "target_race_id = 922\n",
+    "# Filter to races before the given race. Here to get a given race change the 'target_race_id' to the race you want to see. Right now it is set to 841. \n",
+    "target_race_id = 841\n",
     "previous_races_df = results_df.filter(col(\"raceId\") < target_race_id)\n",
     "\n",
     "# Create labeled columns\n",
@@ -402,14 +458,21 @@
     "\n",
     "# Display results\n",
     "final_df.select(\"surname\", \"wins\", \"completed_not_won\", \"not_completed\", \"total_races\") \\\n",
-    "    .orderBy(\"wins\", ascending=False).show()"
+    "    .orderBy(\"wins\", ascending=False).show()\n",
+    "\n",
+    "# Outputting to AWS\n",
+    "final_df.coalesce(1).write.mode('overwrite').option(\"header\", True)\\\n",
+    "    .csv(\"s3://jwj2123-gr5069/processed/Assignment #2/win_losses/\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ecfa3384-1a10-4166-959f-8a6dc4d46290",
      "showTitle": false,
@@ -469,56 +532,11 @@
     "display(\n",
     "    final_gain_df.select(\"surname\", \"avg_position_gain\")\n",
     "    .orderBy(\"avg_position_gain\", ascending=False)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "35867694-8fc0-40e4-862b-c8efb3e37cb2",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Here, any status not equal to \"Finished\" is considered a DNF.\n",
-    "dnf_status_ids = status_df.filter(col(\"status\") != \"Finished\") \\\n",
-    "    .select(\"statusId\").rdd.flatMap(lambda x: x).collect()\n",
-    "\n",
-    "# Set the target race (for example, race 922) and filter previous races.\n",
-    "target_race_id = 922  # Update this value if needed\n",
-    "previous_races_df = results_df.filter(col(\"raceId\") < target_race_id)\n",
-    "\n",
-    "# Create labeled columns:\n",
-    "# - 'win': 1 if driver finished first (positionOrder == 1), else 0.\n",
-    "# - 'completed_not_won': 1 if driver did not win (positionOrder > 1)\n",
-    "#   and completed the race (statusId not in DNF list), else 0.\n",
-    "labeled_df = previous_races_df.withColumn(\n",
-    "    \"win\", when(col(\"positionOrder\") == 1, 1).otherwise(0)\n",
-    ").withColumn(\n",
-    "    \"completed_not_won\", when((col(\"positionOrder\") > 1) & (~col(\"statusId\").isin(dnf_status_ids)), 1).otherwise(0)\n",
     ")\n",
     "\n",
-    "# Aggregate counts per driver:\n",
-    "agg_df = labeled_df.groupBy(\"driverId\").agg(\n",
-    "    F.sum(\"win\").alias(\"win_count\"),\n",
-    "    F.sum(\"completed_not_won\").alias(\"non_win_completed_count\")\n",
-    ")\n",
-    "\n",
-    "# Join with the drivers DataFrame to get the driver surnames.\n",
-    "final_df = agg_df.join(drivers_df.select(\"driverId\", \"surname\"), on=\"driverId\", how=\"left\")\n",
-    "\n",
-    "# Order the results by win_count descending.\n",
-    "final_df = final_df.orderBy(\"win_count\", ascending=False).show()"
+    "# Outputting to AWS\n",
+    "final_gain_df.coalesce(1).write.mode('overwrite').option(\"header\", True)\\\n",
+    "    .csv(\"s3://jwj2123-gr5069/processed/Assignment #2/driver_improvement/\")"
    ]
   }
  ],
@@ -534,7 +552,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Applied Data Homework 3",
+   "notebookName": "Applied Data Homework 2",
    "widgets": {}
   },
   "language_info": {
