Added to Script Header
Added my outputs to my script header

--- a/Applied Data Homework 2.ipynb
+++ b/Applied Data Homework 2.ipynb
@@ -23,7 +23,7 @@
     "# Project: Applied Data Homework #2\n",
     "# Purpose: Answer question using F1 data on the AWS S3 utilizing Databricks using either Pandas, R , or PySpark \n",
     "# Inputs: raw/pit_stops.csv, raw/drivers.csv, raw/results.csv, raw/races.csv, raw/status.csv, raw/qualifying.csv\n",
-    "# Outputs: "
+    "# Outputs: age/, average_time/, driver_improvment/, missing_code/, rank_average_time/, win_losses/"
    ]
   },
   {
