Update where data came from
Update my inputs and outputs and where the data came from. In this case they came from aws and they will be going back to my bucket under the processed folder.

--- a/Applied Data Homework 2.ipynb
+++ b/Applied Data Homework 2.ipynb
@@ -22,8 +22,8 @@
     "# Date: March 22, 2025\n",
     "# Project: Applied Data Homework #2\n",
     "# Purpose: Answer question using F1 data on the AWS S3 utilizing Databricks using either Pandas, R , or PySpark \n",
-    "# Inputs: raw/pit_stops.csv, raw/drivers.csv, raw/results.csv, raw/races.csv, raw/status.csv, raw/qualifying.csv\n",
-    "# Outputs: age/, average_time/, driver_improvment/, missing_code/, rank_average_time/, win_losses/"
+    "# Inputs from AWS: raw/pit_stops.csv, raw/drivers.csv, raw/results.csv, raw/races.csv, raw/status.csv, raw/qualifying.csv\n",
+    "# Outputs to AWS: age/, average_time/, driver_improvment/, missing_code/, rank_average_time/, win_losses/"
    ]
   },
   {
